--- a/task2_music.html
+++ b/task2_music.html
@@ -46,42 +46,42 @@
   <h2>🎬 Top Albums ...</h2>
   <div class="grid">
     <div class="card">
-      <img src="https://i.imgur.com/nOa4tTA.jpg" alt="Top Gun">
+      <img src="https://upload.wikimedia.org/wikipedia/en/d/d1/Top_Gun_Maverick_Poster.jpg" alt="Top Gun">
       <p class="title">Top Gun: Maverick</p>
       <p>Soundtrack</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/ITVpgLz.jpg" alt="Black Panther">
+      <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Black_Panther_Wakanda_Forever_poster.jpg" alt="Black Panther">
       <p class="title">Black Panther</p>
       <p>Wakanda Forever</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/1xaCIPf.jpg" alt="Spider-Man">
+      <img src="https://upload.wikimedia.org/wikipedia/en/0/00/Spider-Man_No_Way_Home_poster.jpg" alt="Spider-Man">
       <p class="title">Spider-Man</p>
       <p>No Way Home</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/LHDBTFh.jpg" alt="Thor">
+      <img src="https://upload.wikimedia.org/wikipedia/en/8/88/Thor_Love_and_Thunder_poster.jpeg" alt="Thor">
       <p class="title">Thor</p>
       <p>Love & Thunder</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/xXVbmWd.jpg" alt="RRR">
+      <img src="https://upload.wikimedia.org/wikipedia/en/d/d7/RRR_Poster.jpg" alt="RRR">
       <p class="title">RRR</p>
       <p>Telugu Epic</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/yUHO6Rn.jpg" alt="Baahubali 2">
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Baahubali_2_The_Conclusion_poster.jpg" alt="Baahubali 2">
       <p class="title">Baahubali 2</p>
       <p>The Conclusion</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/X4L3a7a.jpg" alt="Pushpa">
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Pushpa_-_The_Rise_Poster.jpg" alt="Pushpa">
       <p class="title">Pushpa</p>
       <p>The Rise</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/Y9E2Lu3.jpg" alt="KGF Chapter 2">
+      <img src="https://upload.wikimedia.org/wikipedia/en/5/5a/K.G.F_Chapter_2.jpg" alt="KGF Chapter 2">
       <p class="title">KGF Chapter 2</p>
       <p>Action Drama</p>
     </div>
@@ -90,52 +90,52 @@
   <h2>🎤 Top 10 Artist ...</h2>
   <div class="grid">
     <div class="card">
-      <img src="https://i.imgur.com/1qV3QdT.jpg" alt="Benson Boone">
+      <img src="https://i.scdn.co/image/ab6761610000e5eb65775b353f563db10f2a54e7" alt="Benson Boone">
       <p class="title">Benson Boone</p>
       <p>Pop Artist</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/2U3cxOv.jpg" alt="The Weeknd">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/The_Weeknd_2021.jpg" alt="The Weeknd">
       <p class="title">The Weeknd</p>
       <p>R&B Singer</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/KV9xBFS.jpg" alt="Taylor Swift">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Taylor_Swift_3_-_2019_by_Glenn_Francis.jpg" alt="Taylor Swift">
       <p class="title">Taylor Swift</p>
       <p>Pop Icon</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/N2oM5sL.jpg" alt="AR Rahman">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/A._R._Rahman_2017.jpg" alt="AR Rahman">
       <p class="title">A.R Rahman</p>
       <p>Music Maestro</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/X3scARH.jpg" alt="Ilaiyaraaja">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/Ilaiyaraaja_2010.jpg" alt="Ilaiyaraaja">
       <p class="title">Ilaiyaraaja</p>
       <p>Legendary Composer</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/knPXYFq.jpg" alt="Anirudh">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Anirudh_Ravichander_at_Bruce_Lee_Audio_Launch.jpg" alt="Anirudh">
       <p class="title">Anirudh Ravichander</p>
       <p>Music Director</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/XMr9zo1.jpg" alt="Ariana Grande">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Ariana_Grande_Grammys_Red_Carpet_2020.png" alt="Ariana Grande">
       <p class="title">Ariana Grande</p>
       <p>Pop Superstar</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/RwQu6DN.jpg" alt="Shawn Mendes">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Shawn_Mendes_VMA_2018.png" alt="Shawn Mendes">
       <p class="title">Shawn Mendes</p>
       <p>Singer-Songwriter</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/fykGuap.jpg" alt="Imagine Dragons">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/58/Imagine_Dragons%2C_2013.jpg" alt="Imagine Dragons">
       <p class="title">Imagine Dragons</p>
       <p>Rock Band</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/UCINdN5.jpg" alt="Alex Warren">
+      <img src="https://yt3.googleusercontent.com/VZ5CHLGJo9dR6PlyICyxAdOZQ7ABIrN9I55zkMhrDxBG_cKheOp6SYO9HXiMnZDhKHPbfIO5yw=s900-c-k-c0x00ffffff-no-rj" alt="Alex Warren">
       <p class="title">Alex Warren</p>
       <p>Rising Star</p>
     </div>
