--- a/task2_music.html
+++ b/task2_music.html
@@ -3,65 +3,82 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Albums & Artists</title>
+  <title>Top Albums & Artists</title>
   <style>
     body {
-      background-color: #111;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      text-align: center;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: url('ec956bd0-c071-4e80-8a48-d3a07d8e7951.png') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
     }
+
     h2 {
+      text-align: center;
+      margin: 40px 0 20px;
       color: #FFD700;
-      margin-top: 30px;
+      font-size: 28px;
     }
+
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin: 20px;
+      padding: 0 30px;
     }
+
     .card {
-      background-color: #222;
-      border-radius: 10px;
+      background-color: rgba(0, 0, 0, 0.7);
+      border-radius: 15px;
       overflow: hidden;
       width: 160px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+      box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+      transition: transform 0.3s ease;
     }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+
     .card img {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
     }
+
     .card p {
-      margin: 8px 0;
+      margin: 5px 0;
     }
+
     .title {
       font-weight: bold;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
+
   <h2>🎬 Top Albums ...</h2>
   <div class="grid">
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/d/d1/Top_Gun_Maverick_Poster.jpg" alt="Top Gun">
+      <img src="https://m.media-amazon.com/images/I/91OwWG+9-jL._AC_UF894,1000_QL80_.jpg" alt="Top Gun">
       <p class="title">Top Gun: Maverick</p>
       <p>Soundtrack</p>
     </div>
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Black_Panther_Wakanda_Forever_poster.jpg" alt="Black Panther">
+      <img src="https://m.media-amazon.com/images/I/81-QB7nDh4L._AC_UF1000,1000_QL80_.jpg" alt="Black Panther">
       <p class="title">Black Panther</p>
       <p>Wakanda Forever</p>
     </div>
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/0/00/Spider-Man_No_Way_Home_poster.jpg" alt="Spider-Man">
+      <img src="https://m.media-amazon.com/images/I/81P5+9Qbw-L._AC_UF1000,1000_QL80_.jpg" alt="Spider-Man">
       <p class="title">Spider-Man</p>
       <p>No Way Home</p>
     </div>
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/8/88/Thor_Love_and_Thunder_poster.jpeg" alt="Thor">
+      <img src="https://m.media-amazon.com/images/I/91zQeYhSfoL._AC_UF894,1000_QL80_.jpg" alt="Thor">
       <p class="title">Thor</p>
       <p>Love & Thunder</p>
     </div>
@@ -87,7 +104,7 @@
     </div>
   </div>
 
-  <h2>🎤 Top 10 Artist ...</h2>
+  <h2>🎤 Top 10 Artists ...</h2>
   <div class="grid">
     <div class="card">
       <img src="https://i.scdn.co/image/ab6761610000e5eb65775b353f563db10f2a54e7" alt="Benson Boone">
@@ -140,5 +157,6 @@
       <p>Rising Star</p>
     </div>
   </div>
+
 </body>
 </html>
